# mandy

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
documentation/: development.markdown  installation.markdown  sites.markdown  usage.markdown
src/: lib.rs  main.rs
src/modules/: cli.rs  compile.rs  err.rs  extras.rs  gather.rs  mod.rs  processors.rs  reset.rs  units.rs  utils.rs
