[package]
name = "mandy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
author = ["Alyx Shang"]
description= "A light and fast static-site generator."
homepage = "https://github.com/alyxshang/mandy"
repository = "https://github.com/alyxshang/mandy"
readme = "README.markdown"

[dependencies]
grass = "0.13.4"
liquid = "0.26.9"
walkdir = "2.5.0"
serde_yml = "0.0.12"
serde_json = "1.0.128"
markdown = "1.0.0-alpha.20"
serde-frontmatter = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
cliply = { git = "https://github.com/alyxshang/cliply", tag = "v.0.1.0" }
coutils = { git = "https://github.com/alyxshang/coutils", tag = "v.0.1.0", features = ["filesystem"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1